[tool.poetry]
name = "httpx-cache"
version = "0.1.0"
description = ""
authors = ["Joshua Brooks <josh.vdbroek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
httpx = "^0.21.1"
aioredis = "^2.0.1"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
mypy = "^0.930"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^6.2.5"
pytest-httpx = "^0.17.3"
pytest-asyncio = "^0.16.0"
types-aiofiles = "^0.7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'
extend_skip = ['env']

[tool.black]
line-length = 180
target-version = ['py39']
include = '\.pyi?$'
